[package]
name = "tq"
version = "0.1.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
description = "Command-line TOML parser similar to jq"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
env_logger = "0.5"
failure = "0.1"
lalrpop-util = "0.15.2"
log = "0.4"
regex = "1.0"
structopt = "0.2"
toml = "0.4"

[build-dependencies]
lalrpop = "0.15.2"
