[package]
name = "tq"
version = "0.1.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
description = "Command-line TOML parser similar to jq"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/ebkalderon/tq"
repository = "https://github.com/ebkalderon/tq"
readme = "README.md"
edition = "2018"

[badges]
circle-ci = { repository = "ebkalderon/tq" }

[dependencies]
colored = "1.8.0"
env_logger = "0.6.1"
log = "0.4.6"
pom = "3.0.2"
regex = "1.1.6"
structopt = "0.2.15"
toml = "0.5.1"

[dev-dependencies]
float-cmp = "0.4"

[profile.release]
lto = true
